--- a/15-authentication/exercise/authentication/package.json
+++ b/15-authentication/exercise/authentication/package.json
@@ -7,16 +7,21 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.6.5",
+    "body-parser": "^1.17.1",
     "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.3.2",
+    "cookie-parser": "^1.4.3",
     "ejs": "^1.0.0",
-    "express": "5.0.0-alpha.2",
+    "express": "^5.0.0-alpha.2",
     "express-handlebars": "^3.0.0",
-    "express-session": "^1.7.6",
+    "express-session": "^1.15.2",
     "handlebars-helper-equal": "^1.0.0",
-    "mongoose": "^4.0.0",
-    "passport": "^0.2.0",
-    "passport-local": "^1.0.0"
-  }
+    "mongoose": "^4.9.5",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0"
+  },
+  "description": "Learn About Me ==============",
+  "version": "1.0.0",
+  "author": "",
+  "license": "ISC"
 }
